ffmpeg_xmake/lib/g/ffmpeg_hl_web_bindings.g.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
// import 'dart:ffi' as ffi;
import 'package:universal_ffi/ffi.dart' as ffi;
/// Bindings for `src/ffmpeg_hl.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class FfmpegHlBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FfmpegHlBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FfmpegHlBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  int sum(int a, int b) {
    return _sum(a, b);
  }

  late final _sumPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>('sum');
  late final _sum = _sumPtr.asFunction<int Function(int, int)>();

  int sum_long_running(int a, int b) {
    return _sum_long_running(a, b);
  }

  late final _sum_long_runningPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
        'sum_long_running',
      );
  late final _sum_long_running = _sum_long_runningPtr
      .asFunction<int Function(int, int)>();

  ffi.Pointer<ffi.Char> get_ffmpeg_version() {
    return _get_ffmpeg_version();
  }

  late final _get_ffmpeg_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function()>>(
        'get_ffmpeg_version',
      );
  late final _get_ffmpeg_version = _get_ffmpeg_versionPtr
      .asFunction<ffi.Pointer<ffi.Char> Function()>();

  ffi.Pointer<ffi.Char> run_merge_audio_video(
    ffi.Pointer<ffi.Char> video_path,
    ffi.Pointer<ffi.Char> audio_path,
    ffi.Pointer<ffi.Char> output_path,
  ) {
    return _run_merge_audio_video(video_path, audio_path, output_path);
  }

  late final _run_merge_audio_videoPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('run_merge_audio_video');
  late final _run_merge_audio_video = _run_merge_audio_videoPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
        )
      >();

  ffi.Pointer<ffi.Char> run_merge_videos(
    ffi.Pointer<ffi.Pointer<ffi.Char>> video_paths,
    int path_count,
    ffi.Pointer<ffi.Char> output_path,
  ) {
    return _run_merge_videos(video_paths, path_count, output_path);
  }

  late final _run_merge_videosPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(
            ffi.Pointer<ffi.Pointer<ffi.Char>>,
            ffi.Int,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('run_merge_videos');
  late final _run_merge_videos = _run_merge_videosPtr
      .asFunction<
        ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          int,
          ffi.Pointer<ffi.Char>,
        )
      >();

  void free_string(ffi.Pointer<ffi.Char> ptr) {
    return _free_string(ptr);
  }

  late final _free_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'free_string',
      );
  late final _free_string = _free_stringPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();
}
